1.5.5:
	Fix bad substitutions in rc scripts
	Fix build problems on Solaris
1.5.4:
	Avoid race conditions when reloading the config (Attila Bruncsak)
	Full blown IPv6 support, from Hajimu Umemoto
	rc-debian.sh script, from Joel Bertrand
1.5.3:
	Fix unproper MX sync port on little endian machines
1.5.2:
	Add a template Makefile to manually tweak if configure fails
	Feed strtkok_r with a NULL initialized pointer
	More mixed I/O fix: another fflush after a fgets() 
1.5.1:
	Fix mixed I/O in MX sync on Solaris, from Attila Bruncsak
	Check that compiler and linker accept -Wall
	Document the comment on end of line bug
	Clean up rc-solaris.sh on make clean
	syslog the expired autowhite entry correctly, from Mattieu Herrb
	Handle mailing lists with unique sender by removing '^.*=' from sender
	Minor bug fixes in queue management from Wolfgang Solfrank
1.4:
	New stable branch
1.3.9:
	Solaris rc script from Christian Pelissier
	Correctly check pthread function return values
	Avoid using a thread for the initial config file load (useless)
	Bug fix: Domain regex were not freed on config file reloads	
	Bug fix: Timeout parmaeter was not honoured everywhere
1.3.8:
	Shut up  a warning at build time
1.3.7:
	Bug fix: on some platforms, reloading the config caused SIGSEGV
1.3.6:
	Big bug fix: rcpt keywords did not work anymore without regex	
	Case-insensitive regular expression matching
1.3.5:
	Fix install bug on some platforms (permissions)
	Use CC as defined by configure, fix the build on Solaris
	Build fix in Yacc file
1.3.4:
	DNS support in greylist.conf through the domain keyword
	Make the greylist timeout a config file option
1.3.3:
	Bug fix: lazyaw did not work properly in some situations
	Final dump on milter-greylist exit
	Case insensitive check for autowhitelist everywhere (was inconsistent)
	Better scallability by adjusting the dump delay
	Work with NetBSD 2.0 native libpthread
1.3.2:
	Support STARTTLS (Contribution from Matthieu Herrb)