@@ -1,4 +1,5 @@
 1.5.5:
+	Disable getnameinfo as in causes an ABI clash in Linux
 	Fix bad substitutions in rc scripts
 	Fix build problems on Solaris
 1.5.4:
